k8s/dev/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuhzoo-ui
spec:
  type: ClusterIP
  selector:
    app: kuhzoo-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
